[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 250, 276 )

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.6

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 250, 276 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="game_over" from="player" to="." method="_on_player_game_over"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
